# pdf2md

./: .gitignore  README.md  app.py  pyproject.toml  render.yaml  requirements.txt
.streamlit/: config.toml
src/pdf2md/: __init__.py  cli.py  pipeline.py  web.py
tests/: test_chunking.py  test_cli.py  test_pipeline.py  test_web.py
