[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf2md"
version = "0.1.0"
description = "Local-first document to Markdown converter with chapter and chunk outputs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.88.0",
    "pymupdf>=1.27.2.2",
    "pymupdf4llm>=1.27.2.2",
    "python-slugify>=8.0.4",
    "streamlit>=1.45.0",
    "tiktoken>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
pdf2md = "pdf2md.cli:main"
pdf2md-web = "pdf2md.web:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pdf2md"]
